--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <distributionManagement>
     <repository>
         <id>central</id>
-        <name>MUDU-PC-releases</name>
+        <name>MC0WZYSC-releases</name>
         <url>http://localhost:8081/artifactory/libs-release</url>
     </repository>
 </distributionManagement>
